# EAGLE

./: .gitignore  EAGLE3_Dataset_Update_Summary.md  README.md  pyproject.toml  requirements.txt
eagle/application/: webui.py
eagle/evaluation/: alpha.py  gen_baseline_answer_llama2chat.py  gen_baseline_answer_llama3chat.py  gen_baseline_answer_mix.py  gen_baseline_answer_vicuna.py  gen_ea_alpha_llama2chat.py  gen_ea_alpha_vicuna.py  gen_ea_answer_ds.py  gen_ea_answer_llama2chat.py  gen_ea_answer_llama3chat.py  gen_ea_answer_mix.py  gen_ea_answer_vicuna.py  speed.py
eagle/model/: choices.py  cnets.py  ea_model.py  kv_cache.py  modeling_eagle.py  modeling_mixtral_kv.py  modeling_qwen2_kv.py  utils.py  utils_c.py
eagle/testbug/: testbbug.py  vis.py
eagle/testbug/model/: choices.py  cnets.py  ea_model.py  ea_modelbs.py  kv_cache.py  utils.py  utils_c.py
eagle/train/eagle/: main.py  main_deepspeed.py
eagle/train/eagle3/: README.md  README_DATASET.md  cnets.py  config.json  configs.py  ds_config.json  example_usage.py  main.py  modeling_llama_kv.py  prepare.py  prepare_mixed_dataset.py  run_training.sh
